fix: y axis overflow is a bad idea

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,7 +60,7 @@ body {
   min-height: 100vh;
   overflow-x: hidden;
   /* Why: Due to the mouse blob effect extending the vertical viewport  */
-  overflow: hidden;
+  /* overflow: hidden; */
   @apply font-serif;
 }
 
